correcting body alignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body{
     display: flex;
     justify-content: center;
-    margin: 250px 0px 0px 0px;
+    align-items: center;
 }
 
 main{
